err/fan.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/aiozk'...
Listing './lib/python3.5/site-packages/aiozk/protocol'...
Listing './lib/python3.5/site-packages/aiozk/recipes'...
Listing './lib/python3.5/site-packages/aiozk/test'...
Compiling './lib/python3.5/site-packages/aiozk/test/conftest.py'...
***   File "./lib/python3.5/site-packages/aiozk/test/conftest.py", line 36
    print(f'Tree dump: {out}')
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aiozk/test/test_client.py'...
***   File "./lib/python3.5/site-packages/aiozk/test/test_client.py", line 14
    child_1 = f'{path}/{uuid.uuid4().hex}'
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aiozk/test/test_treecache.py'...
***   File "./lib/python3.5/site-packages/aiozk/test/test_treecache.py", line 16
    await self.zk.create(f'{self.path}/{name}')
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aiozk/test/test_watchers.py'...
***   File "./lib/python3.5/site-packages/aiozk/test/test_watchers.py", line 79
    yield f'{path}/{uuid.uuid4().hex}'
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aiozk-0.5.3.egg-info'...
Listing './lib/python3.5/site-packages/basictracer'...
Listing './lib/python3.5/site-packages/basictracer-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fan'...
Listing './lib/python3.5/site-packages/fan/contrib'...
Listing './lib/python3.5/site-packages/fan/contrib/aio'...
Listing './lib/python3.5/site-packages/fan/contrib/aio/tests'...
Listing './lib/python3.5/site-packages/fan/contrib/amqp'...
Listing './lib/python3.5/site-packages/fan/contrib/amqp/tests'...
Listing './lib/python3.5/site-packages/fan/contrib/django'...
Listing './lib/python3.5/site-packages/fan/contrib/kazoo'...
Listing './lib/python3.5/site-packages/fan/contrib/redis'...
Listing './lib/python3.5/site-packages/fan/contrib/redis/tests'...
Listing './lib/python3.5/site-packages/fan/contrib/sync_helper'...
Listing './lib/python3.5/site-packages/fan/contrib/sync_helper/tests'...
Listing './lib/python3.5/site-packages/fan/scripts'...
Listing './lib/python3.5/site-packages/fan/tests'...
Listing './lib/python3.5/site-packages/fan/transport'...
Listing './lib/python3.5/site-packages/fan-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/kazoo'...
Listing './lib/python3.5/site-packages/kazoo/handlers'...
Listing './lib/python3.5/site-packages/kazoo/protocol'...
Listing './lib/python3.5/site-packages/kazoo/recipe'...
Listing './lib/python3.5/site-packages/kazoo/testing'...
Listing './lib/python3.5/site-packages/kazoo/tests'...
Listing './lib/python3.5/site-packages/kazoo-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/opentracing'...
Listing './lib/python3.5/site-packages/opentracing/ext'...
Listing './lib/python3.5/site-packages/opentracing/harness'...
Listing './lib/python3.5/site-packages/opentracing-1.2.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/protobuf-3.5.1.dist-info'...
Listing './lib/python3.5/site-packages/py_zipkin'...
Listing './lib/python3.5/site-packages/py_zipkin/thrift'...
Listing './lib/python3.5/site-packages/py_zipkin-0.9.0.dist-info'...
Listing './lib/python3.5/site-packages/python_json_logger-0.1.8.dist-info'...
Listing './lib/python3.5/site-packages/pythonjsonlogger'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/thriftpy'...
Listing './lib/python3.5/site-packages/thriftpy/contrib'...
Listing './lib/python3.5/site-packages/thriftpy/contrib/tracking'...
Listing './lib/python3.5/site-packages/thriftpy/parser'...
Listing './lib/python3.5/site-packages/thriftpy/protocol'...
Listing './lib/python3.5/site-packages/thriftpy/transport'...
Listing './lib/python3.5/site-packages/thriftpy/transport/buffered'...
Listing './lib/python3.5/site-packages/thriftpy/transport/framed'...
Listing './lib/python3.5/site-packages/thriftpy/transport/memory'...
Listing './lib/python3.5/site-packages/thriftpy-0.3.9.egg-info'...
Listing './lib/python3.5/site-packages/tipsi_tools'...
Listing './lib/python3.5/site-packages/tipsi_tools/django'...
Listing './lib/python3.5/site-packages/tipsi_tools/doc_utils'...
Listing './lib/python3.5/site-packages/tipsi_tools/doc_utils/tipsi_sphinx'...
Listing './lib/python3.5/site-packages/tipsi_tools/drf'...
Listing './lib/python3.5/site-packages/tipsi_tools/scripts'...
Listing './lib/python3.5/site-packages/tipsi_tools/testing'...
Listing './lib/python3.5/site-packages/tipsi_tools/testing/drf'...
Listing './lib/python3.5/site-packages/tipsi_tools-1.17.0.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
